Add Post Data Model

--- a/ForumAppDemo/appsettings.json
+++ b/ForumAppDemo/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-78D1RCG;Database=ForumAppDemo;Integrated Security=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
